renamed CX Admin tiles to prevent confusion. Updated panel style on Muni Settings headers Files modified - [MunicipalitySettings.html,CXAdmin.html]

--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -25,7 +25,7 @@
                             <wm-layoutgrid name="layoutgrid8">
                                 <wm-gridrow name="gridrow12" padding="2em">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn28">
-                                        <wm-panel iconclass="wi wi-info-outline" name="panel2" title="Municipality Info">
+                                        <wm-panel iconclass="wi wi-info-outline" name="panel2" title="Municipality Info" class="panel-primary">
                                             <wm-layoutgrid name="layoutgrid3">
                                                 <wm-gridrow name="gridrow6_1">
                                                     <wm-gridcolumn columnwidth="6" name="gridcolumn8" padding="1em unset">
@@ -113,7 +113,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow13" padding="2em">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn30">
-                                        <wm-panel iconclass="wi wi-pen" name="panel3" title="Global Email Signature">
+                                        <wm-panel iconclass="wi wi-pen" name="panel3" title="Global Email Signature" class="panel-primary">
                                             <wm-layoutgrid name="layoutgrid4">
                                                 <wm-gridrow name="gridrow15_1">
                                                     <wm-gridcolumn columnwidth="12" name="gridcolumn35_1">
@@ -136,7 +136,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow14" padding="2em">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn32">
-                                        <wm-panel iconclass="wi wi-insert-emoticon" name="panel4" title="Municipality Logo">
+                                        <wm-panel iconclass="wi wi-insert-emoticon" name="panel4" title="Municipality Logo" class="panel-primary">
                                             <wm-layoutgrid name="layoutgrid6">
                                                 <wm-gridrow name="gridrow38_1">
                                                     <wm-gridcolumn columnwidth="2" name="gridcolumn48_1"></wm-gridcolumn>
