--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -104,7 +104,7 @@
                                                     <wm-gridcolumn columnwidth="2" name="gridcolumn35"></wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="8" name="gridcolumn36"></wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="2" name="gridcolumn37" padding="1em unset">
-                                                        <wm-button class="btn-default" caption="Save" type="button" margin="unset 0.5em" name="button1" iconclass="wi wi-save" on-click="Variables.UpdateMunicipalitesInfo.invoke()"></wm-button>
+                                                        <wm-button class="btn-primary" caption="Save" type="button" margin="unset 0.5em" name="button1" iconclass="wi wi-save" on-click="Variables.UpdateMunicipalitesInfo.invoke()"></wm-button>
                                                     </wm-gridcolumn>
                                                 </wm-gridrow>
                                             </wm-layoutgrid>
@@ -127,7 +127,7 @@
                                                 </wm-gridrow>
                                                 <wm-gridrow name="gridrow16">
                                                     <wm-gridcolumn columnwidth="12" name="gridcolumn37_1" horizontalalign="right">
-                                                        <wm-button class="btn-default" caption="Save" type="button" margin="unset 0.5em" iconclass="wi wi-save" on-click="Variables.UpdateGlobalEmailSig.invoke()" name="button2"></wm-button>
+                                                        <wm-button class="btn-primary" caption="Save" type="button" margin="unset 0.5em" iconclass="wi wi-save" on-click="Variables.UpdateGlobalEmailSig.invoke()" name="button2"></wm-button>
                                                     </wm-gridcolumn>
                                                 </wm-gridrow>
                                             </wm-layoutgrid>
@@ -148,7 +148,7 @@
                                                 <wm-gridrow name="gridrow41">
                                                     <wm-gridcolumn columnwidth="2" name="gridcolumn63"></wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="8" name="gridcolumn61" horizontalalign="center" padding="1em unset">
-                                                        <wm-button class="btn-default" caption="Upload" type="button" margin="unset 0.5em" name="button5" iconclass="wi wi-upload" on-click="Widgets.dialog1.open()" fontweight="bold"></wm-button>
+                                                        <wm-button class="btn-primary" caption="Upload" type="button" margin="unset 0.5em" name="button5" iconclass="wi wi-upload" on-click="Widgets.dialog1.open()" fontweight="bold"></wm-button>
                                                         <wm-label padding="0.5em 0.5em unset 0.5em" name="label13" caption="Upload your Municipality Logo. Please use images with transparency" width="100%"></wm-label>
                                                     </wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="2" name="gridcolumn62" horizontalalign="left"></wm-gridcolumn>
