--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -13,16 +13,15 @@
                 <wm-gridrow name="gridrow9">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn17">
                         <wm-livegrid formlayout="dialog" name="livegrid1">
-                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="Manage Municipalities" dataset="bind:Variables.Cx2MunicipalitiesData.dataSet" navigation="Classic" name="grid1" confirmdelete="Are you sure you want to delete this Municipality?"
+                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="Municipalities" dataset="bind:Variables.Cx2MunicipalitiesData.dataSet" navigation="Classic" name="grid1" confirmdelete="Are you sure you want to delete this Municipality?"
                             deletemessage="Municipality deleted successfully" nodatamessage="No Municipalities found." loadingdatamsg="Please Wait While Loading Municipalities..." exportformat="EXCEL" filtermode="multicolumn">
-                                <wm-grid-column binding="id" caption="Id" type="integer" primary-key="true" generator="identity" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="municipalityName" caption="Municipality" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="logo" caption="Logo" type="blob" widget-type="image" generator="assigned" searchable="false" show="true" filterwidget="text" readonly="false"><img ng-if="columnValue != null" width="48px" class="" data-ng-src="{{contentBaseUrl + row[primaryKey] + '/content/'+ colDef.field}}">
                                 </wm-grid-column>
-                                <wm-grid-column binding="municipalityName" caption="Municipality Name" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="address1" caption="Address1" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="address2" caption="Address2" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="city" caption="City" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="states.stateName" caption="State Name" type="string" generator="assigned" show="true" related-entity-name="States" readonly="false"></wm-grid-column>
+                                <wm-grid-column binding="states.stateName" caption="State" type="string" generator="assigned" show="true" related-entity-name="States" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="postalCode" caption="Postal Code" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="phone" caption="Phone" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="email" caption="Email" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
@@ -77,63 +76,64 @@
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow6">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn11">
-                                            <wm-form-field name="active" displayname="Active" show="true" primary-key="false" generator="assigned" key="active" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
+                                            <wm-form-field name="globalEmailSig" displayname="Global Email Sig" show="true" primary-key="false" generator="assigned" key="globalEmailSig" type="string" widget="textarea" maxchars="255" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn12">
-                                            <wm-form-field name="globalEmailSig" displayname="Global Email Sig" show="true" primary-key="false" generator="assigned" key="globalEmailSig" type="string" widget="textarea" maxchars="255" placeholder="Enter value"></wm-form-field>
+                                            <wm-form-field name="logo" displayname="Logo" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255" permitted="undefined" href="services/cx2/Municipalities/1/content/logo?0.16853062382606043"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow7">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn13">
-                                            <wm-form-field name="logo" displayname="Logo" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255" permitted="undefined" href="services/cx2/Municipalities/1/content/logo?0.16853062382606043"></wm-form-field>
+                                            <wm-form-field name="mondayYn" displayname="Monday Yn" show="true" primary-key="false" generator="assigned" key="mondayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn14">
-                                            <wm-form-field name="mondayYn" displayname="Monday Yn" show="true" primary-key="false" generator="assigned" key="mondayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
+                                            <wm-form-field name="tuesdayYn" displayname="Tuesday Yn" show="true" primary-key="false" generator="assigned" key="tuesdayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow1">
                                         <wm-gridcolumn name="gridcolumn1" columnwidth="6">
-                                            <wm-form-field name="tuesdayYn" displayname="Tuesday Yn" show="true" primary-key="false" generator="assigned" key="tuesdayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
+                                            <wm-form-field name="wednesdayYn" displayname="Wednesday Yn" show="true" primary-key="false" generator="assigned" key="wednesdayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn name="gridcolumn2" columnwidth="6">
-                                            <wm-form-field name="wednesdayYn" displayname="Wednesday Yn" show="true" primary-key="false" generator="assigned" key="wednesdayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
+                                            <wm-form-field name="thursdayYn" displayname="Thursday Yn" show="true" primary-key="false" generator="assigned" key="thursdayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow2">
                                         <wm-gridcolumn name="gridcolumn3" columnwidth="6">
-                                            <wm-form-field name="thursdayYn" displayname="Thursday Yn" show="true" primary-key="false" generator="assigned" key="thursdayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
+                                            <wm-form-field name="fridayYn" displayname="Friday Yn" show="true" primary-key="false" generator="assigned" key="fridayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn name="gridcolumn4" columnwidth="6">
-                                            <wm-form-field name="fridayYn" displayname="Friday Yn" show="true" primary-key="false" generator="assigned" key="fridayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
+                                            <wm-form-field name="saturdayYn" displayname="Saturday Yn" show="true" primary-key="false" generator="assigned" key="saturdayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow3">
                                         <wm-gridcolumn name="gridcolumn5" columnwidth="6">
-                                            <wm-form-field name="saturdayYn" displayname="Saturday Yn" show="true" primary-key="false" generator="assigned" key="saturdayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
+                                            <wm-form-field name="sundayYn" displayname="Sunday Yn" show="true" primary-key="false" generator="assigned" key="sundayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn name="gridcolumn6" columnwidth="6">
-                                            <wm-form-field name="sundayYn" displayname="Sunday Yn" show="true" primary-key="false" generator="assigned" key="sundayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
+                                            <wm-form-field name="timeZone" displayname="Time Zone" show="true" primary-key="false" generator="assigned" key="timeZone" type="string" widget="select" maxchars="255" placeholder="Enter value" dataset="Eastern,Central,Mountain,Pacific"
+                                            defaultvalue="EST"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow4">
                                         <wm-gridcolumn name="gridcolumn7" columnwidth="6">
-                                            <wm-form-field name="timeZone" displayname="Time Zone" show="true" primary-key="false" generator="assigned" key="timeZone" type="string" widget="select" maxchars="255" inputtype="text" placeholder="Enter value"
-                                            dataset="Eastern,Central,Mountain,Pacific" defaultvalue="EST"></wm-form-field>
+                                            <wm-form-field name="openTime" displayname="Open Time" show="true" primary-key="false" generator="assigned" key="openTime" type="time" widget="time" placeholder="Select time" outputformat="HH:mm:ss"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn name="gridcolumn8" columnwidth="6">
-                                            <wm-form-field name="openTime" displayname="Open Time" show="true" primary-key="false" generator="assigned" key="openTime" type="time" widget="time" placeholder="Select time" outputformat="HH:mm:ss"></wm-form-field>
+                                            <wm-form-field name="closeTime" displayname="Close Time" show="true" primary-key="false" generator="assigned" key="closeTime" type="time" widget="time" placeholder="Select time" outputformat="HH:mm:ss"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow5">
                                         <wm-gridcolumn name="gridcolumn9" columnwidth="6">
-                                            <wm-form-field name="closeTime" displayname="Close Time" show="true" primary-key="false" generator="assigned" key="closeTime" type="time" widget="time" placeholder="Select time" outputformat="HH:mm:ss"></wm-form-field>
+                                            <wm-form-field name="active" displayname="Active" show="true" primary-key="false" generator="assigned" key="active" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
-                                <wm-form-field name="municipalityGuid" displayname="Municipality Guid" show="false" primary-key="false" generator="assigned" key="municipalityGuid" type="string" widget="text" maxchars="255" defaultvalue="bind:GUID" disabled="true"
-                                inputtype="text" placeholder="Enter value"></wm-form-field>
+                                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number"></wm-form-field>
+                                <wm-form-field name="municipalityGuid" displayname="Municipality Guid" show="false" primary-key="false" generator="assigned" key="municipalityGuid" type="string" widget="text" maxchars="255" defaultvalue="bind:GUID"
+                                disabled="true" inputtype="text" placeholder="Enter value"></wm-form-field>
                                 <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
-                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                             </wm-liveform>
                         </wm-livegrid>
                     </wm-gridcolumn>
