New Form dashboard link doesn't work (link working for MyProfile Page) Bug 602 Files modified - [MyProfile.html,MyProfile.js]

--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -263,4 +263,7 @@
             </wm-liveform>
         </wm-dialog>
     </wm-view>
+    <wm-view class="dialog-view" name="view3">
+        <wm-pagedialog name="pagedialogNewForm" content="NewForm" title="New Form"></wm-pagedialog>
+    </wm-view>
 </wm-page>
