MuniUsers/View Profile(s)- modals not updating correctly Bug 785 Fixed Files modified - [MunicipalityUsers.html,MunicipalityUsers.js]

--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -256,7 +256,7 @@
                 <wm-gridrow name="gridrow27">
                     <wm-gridcolumn columnwidth="2" name="gridcolumn52"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="8" horizontalalign="center" name="gridcolumn53">
-                        <wm-label padding="unset 0.5em" fontweight="bold" fontsize="20" caption="bind:Widgets.gridUsersubscriptionsList.selecteditem.users.firstName+&quot; &quot;+Widgets.gridUsersubscriptionsList.selecteditem.users.lastName" name="label34"></wm-label>
+                        <wm-label padding="unset 0.5em" fontweight="bold" fontsize="20" caption="bind:Widgets.gridEmployees.selecteditem.FirstName+&quot; &quot;+Widgets.gridEmployees.selecteditem.LastName" name="label34"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="2" name="gridcolumn54"></wm-gridcolumn>
                 </wm-gridrow>
@@ -345,7 +345,7 @@
                 <wm-gridrow name="gridrow28_2">
                     <wm-gridcolumn columnwidth="2" name="gridcolumn52_1"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="8" horizontalalign="center" name="gridcolumn53_2">
-                        <wm-label padding="unset 0.5em" fontweight="bold" fontsize="20" caption="bind:Widgets.gridUsersubscriptionsList.selecteditem.users.firstName+&quot; &quot;+Widgets.gridUsersubscriptionsList.selecteditem.users.lastName" name="label35_1"></wm-label>
+                        <wm-label padding="unset 0.5em" fontweight="bold" fontsize="20" caption="bind:Widgets.gridAdmin.selecteditem.FirstName+&quot; &quot;+Widgets.gridAdmin.selecteditem.LastName" name="label35_1"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="2" name="gridcolumn54_1"></wm-gridcolumn>
                 </wm-gridrow>
