Updated Login password icon. Made Country field read-only (USA only) on account creation. Updated account creation Success text. Files modified - [UserCreation.html,Login.html]

--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -32,7 +32,7 @@
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn7" padding="unset unset 1em unset">
                                                 <wm-container class="input-group" name="container3">
                                                     <wm-container class="input-group-addon" name="container6">
-                                                        <wm-icon name="icon1" iconclass="wi wi-key"></wm-icon>
+                                                        <wm-icon name="icon1" iconclass="wi wi-vpn-key"></wm-icon>
                                                     </wm-container>
                                                     <wm-text type="password" name="passwordtext" placeholder="Password" class="app-login-password" width="100%" autocomplete="true" autocorrect="off" autocapitalize="off" updateon="default" required="true"></wm-text>
                                                 </wm-container>
